--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -5,18 +5,12 @@ footer {
   justify-content: space-around;
   background-color: $maastricht-blue;
   
-  .social-menu {
+  .socials {
     display: flex;
     justify-content: center;
     margin: 10px;
 
-    &__social-logo {
-      margin: 5px;
-      display: flex;
-      align-content: center;
-      justify-content: center;
-      transition: .4s;
-    }
+    @include social-logo;
   }
 
   .footer-nav-menu {
