--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,5 +6,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Rubik&display=swap');
 @import './variables/screen-sizes';
 @import'./variables/colors';
+@import './mix-ins';
+@import './nav';
+@import './hero';
 @import './global';
 @import './footer';
