added about and worked with sections

--- a/styles/_media-queries.scss
+++ b/styles/_media-queries.scss
@@ -1,29 +1,29 @@
 @mixin respond-to($media) {
-  @if $media == tablet {
-    @media only screen and (min-width: $size-tablet) { @content; }
+  @if $media == wide {
+    @media only screen and (min-width: $wide) { @content; }
   }
   @if $media == desktop {
-    @media only screen and (min-width: $size-desktop) { @content; }
+    @media only screen and (min-width: $desktop) { @content; }
   }
-  @if $media == wide {
-    @media only screen and (min-width: $size-wide) { @content; }
+  @if $media == tablet {
+    @media only screen and (min-width: $tablet) { @content; }
   }
   @if $media == mobile {
-    @media only screen and (min-width: $size-mobile) { @content; }
+    @media only screen and (min-width: $mobile) { @content; }
   }
 }
 
 @mixin respond-until($media) {
-  @if $media == tablet {
-    @media only screen and (max-width: $size-tablet) { @content; }
+  @if $media == wide {
+    @media only screen and (max-width: $wide) { @content; }
   }
   @if $media == desktop {
-    @media only screen and (max-width: $size-desktop) { @content; }
+    @media only screen and (max-width: $desktop) { @content; }
   }
-  @if $media == wide {
-    @media only screen and (max-width: $size-wide) { @content; }
+  @if $media == tablet {
+    @media only screen and (max-width: $tablet) { @content; }
   }
   @if $media == mobile {
-    @media only screen and (max-width: $size-mobile) { @content; }
+    @media only screen and (max-width: $mobile) { @content; }
   }
 }
