--- a/styles/variables/screen-sizes.scss
+++ b/styles/variables/screen-sizes.scss
@@ -1,4 +1,4 @@
-$size-mobile: 478px;
-$size-tablet: 768px;
-$size-desktop: 1025px;
-$size-wide: 1300px;
+$mobile: 478px;
+$tablet: 768px;
+$desktop: 1025px;
+$wide: 1407px;
