--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -60,9 +60,29 @@ li {
   }
 }
 
+button {
+  color:  $periwinkle;
+  background-color: $airforce-blue;
+  font-family: 'Rubik', sans-serif;
+  font-size: 24px;
+  border-radius: 10px;
+  border: none;
+  padding: 10px;
+  margin: 10px;
+  cursor: pointer;
+  transition: .8s;
 
+  &.resume {
+    margin-top: 30px;
+  }
+}
 
 .portlink {
   text-decoration: none;
   color: $airforce-blue;
+}
+
+#periwinkle-h1 {
+  color: $periwinkle;
+  margin-top: 10px;
 }
