--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,11 +3,20 @@
   padding: 0;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Rubik&display=swap');
 @import './variables/screen-sizes';
-@import'./variables/colors';
+@import './variables/colors';
+@import './media-queries';
 @import './mix-ins';
 @import './nav';
 @import './hero';
+@import './about';
+@import './attributes';
 @import './global';
 @import './footer';
