--- a/styles/main.scss
+++ b/styles/main.scss
@@ -14,6 +14,7 @@ main {
 @import './variables/colors';
 @import './media-queries';
 @import './mix-ins';
+@import './animation';
 @import './nav';
 @import './hero';
 @import './about';
