--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -1,7 +1,6 @@
 .about-me-container {
   margin:20px;
   width: 85%;
-  max-height: 1500px;
   background: rgba(202, 223, 250, 0.8);
   border-radius: 10px;
   display: flex;
@@ -25,6 +24,10 @@
     font-size: 48px;
     font-weight: bold;
     margin: 20px;
+
+    @include respond-until(desktop) {
+      font-size: 40px;
+    }
   }
 
   .profile-photo-container {
@@ -32,7 +35,7 @@
     max-width: 30%;
     max-height: 80%;
 
-    @include respond-until(wide) {
+    @include respond-until(desktop) {
       max-width: 70%;
     }
 
@@ -45,12 +48,16 @@
 
   &__text-container {
     margin: 20px;
-    max-width: 700px;
+    max-width: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
     text-align: center;
+
+    @include respond-until(desktop) {
+      max-width: 80%;
+    }
   }
 }
 
