--- a/styles/_attributes.scss
+++ b/styles/_attributes.scss
@@ -44,6 +44,7 @@
     bottom: -60px;
     padding: 10px;
     background-color: $maastricht-blue;
+    text-align: center;
     color: white;
     border-radius: 5px;
     z-index: 100;
