--- a/styles/main.scss
+++ b/styles/main.scss
@@ -15,9 +15,11 @@ main {
 @import './media-queries';
 @import './mix-ins';
 @import './animation';
+@import './global';
 @import './nav';
 @import './hero';
 @import './about';
 @import './attributes';
-@import './global';
+@import './portfolio';
+
 @import './footer';
