--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -54,22 +54,7 @@ li {
     font-size: 16px;
   }
 
-  &:before {
-    content: "";
-    position: absolute;
-    width: 0;
-    height: 2px;
-    bottom: -1px;
-    left: 0;
-    background-color: $periwinkle;
-    visibility: hidden;
-    transition: all 0.2s ease-in-out;
-  }
-
-  &:hover::before {
-    visibility: visible;
-    width: 100%;
-  }
+  @include underline;
 }
 
 .button-general {
