started on portfolio grid

--- a/styles/_animation.scss
+++ b/styles/_animation.scss
@@ -9,3 +9,23 @@
     bottom: -60px
   }
 }
+
+@keyframes appear {
+  0% {
+      opacity: 0;
+  }
+ 
+  100% {
+      opacity: 1; 
+  }
+}
+
+@keyframes disappear {
+  0% {
+      opacity: 1;
+  }
+ 
+  100% {
+      opacity: 0; 
+  }
+}
