--- a/styles/_portfolio.scss
+++ b/styles/_portfolio.scss
@@ -35,4 +35,78 @@
       
     }
   }
+
+  .portfolio-pieces-grid {
+    display: grid;
+    width: 85%;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
+    grid-gap: 50px;
+    padding: 20px;
+    animation: appear 2s;
+    transition: .8s;
+
+    .portfolio-piece {
+      padding: 20px;
+      background: rgba(202, 223, 250, 0.8);
+      border-radius: 10px;
+      color: $maastricht-blue;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: center;
+      text-align: center;
+
+      &:hover {
+        box-shadow: 2px 2px 4px black;
+        background: rgba(190, 218, 255, 0.8);
+        transition: .8s;
+      }
+
+      h3 {
+        margin: 20px 0 0 0;
+      }
+
+      &__image-wrapper {
+        height: 225px;
+        width: 90%;
+        overflow: hidden;
+        border-radius: 10px;
+        object-fit: cover;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 20px 0px;
+
+        img {
+          height: 100%;
+          width: auto;
+          border-radius: 10px;
+        }
+      }
+
+      .tech-stack-area {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 90%;
+        margin: 0 0 10px 0;
+        flex-wrap: wrap;
+
+        .tech-stack {
+          display: flex;
+          align-items: center;
+          margin: 10px 5px;
+          img {
+            width: 30px;
+            height: auto;
+            margin: 0 5px;
+          }
+
+        }
+      }
+      
+
+    }
+  }
 }
