--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -43,6 +43,16 @@ p {
 a {
   text-decoration: none;
   color: $periwinkle;
+  font-family: 'Roboto', sans-serif;
+  font-size: 24px;
+
+  @include respond-until(tablet) {
+    font-size: 15px;
+  }
+  
+  &.portlink {
+    color: $airforce-blue;
+  }
 }
 
 ul {
