--- a/styles/_portfolio.scss
+++ b/styles/_portfolio.scss
@@ -46,6 +46,11 @@
     animation: appear 2s;
     transition: .8s;
 
+    @include respond-until(tablet) {
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
+    }
+
     .portfolio-piece {
       padding: 20px;
       background: rgba(202, 223, 250, 0.8);
@@ -89,7 +94,6 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 90%;
         margin: 0 0 10px 0;
         flex-wrap: wrap;
 
@@ -105,7 +109,101 @@
 
         }
       }
-      
+      .portfolio-piece-modal {
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100vh;
+        width: 100vw;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 105;
+        animation: appear .3s ease-in-out;
+
+        &__background {
+          position: fixed;
+          top: 0;
+          right: 0;
+          background-color: rgba($color: #000000, $alpha: 0.6);
+          z-index: 106;
+          width: 100vw;
+          height: 100vh;
+        }
+
+        &__wrapper {
+          position: relative;
+          display: flex;
+          align-items: center;
+          background-color: rgba(202, 223, 250, 1);
+          width: 70%;
+          max-height: 70%;
+          padding: 20px;
+          z-index: 107;
+          border-radius: 10px;
+
+          @include respond-until(tablet) {
+            width: 75%;
+            flex-direction: column;
+            justify-content: center;
+            padding: 40px 20px;
+          }
+
+          h2 {
+            text-align: center;
+            font-weight: bold;
+          }
+
+          p {
+            margin: 10px 0;
+          }
+
+          .portfolio-piece-image-section {
+            width: 50%;
+
+            @include respond-until(tablet) {
+              width: 100%;
+            }
+            
+            &__thumbnail {
+              width: 90%;
+              border-radius: 10px;
+            }
+          }
+
+          .portfolio-piece-information {
+            display: flex;
+            flex-direction: column;
+            width: 50%;
+            padding: 0 20px;
+            @include respond-until(tablet) {
+              width: 100%;
+            }
+
+            &__links {
+              display: flex;
+              flex-direction: column;
+              margin: 10px 0;
+            }
+          }
+        }
+
+        &__close-button {
+          cursor: pointer;
+          position: absolute;
+          right: 15px;
+          top:15px;
+          background: none;
+          border: none;
+          transition: .3s;
+
+          &:hover {
+            transform: scale(1.1);
+            transition: .3s
+          }
+        }
+
+      }
 
     }
   }
