--- a/styles/_swiper.scss
+++ b/styles/_swiper.scss
@@ -1,4 +1,5 @@
 .swiper-container {
+  overflow-y: visible;
   .swiper-slide {
     width: 100% !important;
     img {
@@ -10,5 +11,9 @@
 
   .swiper-button-next, .swiper-button-prev {
     color: $cerulean-blue !important;
+  }
+
+  .swiper-pagination {
+    bottom: -20px !important;
   }
 }
