finished contact form

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -18,6 +18,7 @@ main {
 @import './global';
 @import './nav';
 @import './hero';
+@import './contact-form';
 @import './about';
 @import './attributes';
 @import './portfolio';
