--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -4,7 +4,7 @@ body {
 
 h1 {
   font-size: 48px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: normal;
   @include respond-until(tablet) {
@@ -14,7 +14,7 @@ h1 {
 
 h2 {
   font-size: 30px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: normal;
   @include respond-until(tablet) {
@@ -24,7 +24,7 @@ h2 {
 
 h3 {
   font-size: 25px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: bold;
   @include respond-until(tablet) {
@@ -32,8 +32,11 @@ h3 {
   }
 }
 
-p {
-  font-family: 'Rubik', sans-serif;
+p,
+label,
+input,
+textarea {
+  font-family: "Rubik", sans-serif;
   font-size: 24px;
   @include respond-until(tablet) {
     font-size: 15px;
@@ -43,13 +46,13 @@ p {
 a {
   text-decoration: none;
   color: $periwinkle;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 24px;
 
   @include respond-until(tablet) {
     font-size: 15px;
   }
-  
+
   &.portlink {
     color: $airforce-blue;
   }
@@ -66,10 +69,10 @@ ul {
 li {
   position: relative;
   border-radius: 10px;
-  font-family: 'Nunito', sans-serif;
+  font-family: "Nunito", sans-serif;
   color: $periwinkle;
   font-size: 30px;
-  transition: .5s;
+  transition: 0.5s;
   @include respond-until(tablet) {
     font-size: 16px;
   }
@@ -78,16 +81,16 @@ li {
 }
 
 .button-general {
-  color:  $periwinkle;
+  color: $periwinkle;
   background-color: $airforce-blue;
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   font-size: 24px;
   border-radius: 10px;
   border: none;
   padding: 10px;
   margin: 10px;
   cursor: pointer;
-  transition: .8s;
+  transition: 0.8s;
 
   @include respond-until(tablet) {
     font-size: 16px;
@@ -102,7 +105,7 @@ li {
   cursor: pointer;
   border: none;
   background: none;
-  font-family: 'Nunito', sans-serif;
+  font-family: "Nunito", sans-serif;
   color: $periwinkle;
   font-size: 30px;
 
