add space to paragraphs

--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -20,6 +20,10 @@
     color: $cerulean-blue;
   }
 
+  p {
+    margin-bottom: 20px;
+  }
+
   #about-me {
     font-size: 48px;
     font-weight: bold;
