--- a/styles/_swiper.scss
+++ b/styles/_swiper.scss
@@ -1,7 +1,13 @@
 .swiper-container {
   overflow-y: visible;
   .swiper-slide {
+    position: relative;
+    height: 500px;
     width: 100% !important;
+    @include respond-until(mobile) {
+      height: 300px
+    }
+    
     img {
       width: 100%; 
       height: 120% !important;
